login model and alignment correction

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -119,7 +119,7 @@ a {
   from {
     left: -150px;
     bottom: -300px;
-    opacity: 0.8;
+    opacity: 0.5;
   }
 
 
